--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="World of food">
+    <meta name="keywords" content="Food, World Food, Best Food, SUSHI, Fuzi, blitva, Carbonara, Tortilla, pizza, Boeuf">
+    <meta name="author" content="Damir Sertić">
     <title>World of Food</title>
-    <!-- <link rel="stylesheet" href="../Projekt_Sertic_WOF/js/bootstrap.min.js"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="vendor/aos/aos.css">
     <link rel="stylesheet" href="css/mainStyle.css">
     <link rel="stylesheet" href="css/mediaQueries.css">
@@ -25,7 +23,7 @@
                 <a class="navbar-brand" href="#">W.o.F</a>
                 <button class="navbar-toggler nav-button" type="button" data-toggle="collapse" data-target=""
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span id="nav-icon3"><span></span><span></span><span></span><span></span></span></a>
+                    <span id="nav-icon3"><span></span><span></span><span></span><span></span></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -78,7 +76,7 @@
         </header>
         <div class="container-fluid p-0 m-0">
             <div id="Data1" class="row no-gutters">
-                <div class="col-md-12 col-sm-12 col-12 p-0 m-0">
+                <!-- <div class="video col-md-12 col-sm-12 col-12 p-0 m-0">
                     <article class="videoContainer">
                         <div class="overShadow">
                             <div class="overlay">
@@ -93,11 +91,9 @@
                                             </a>
                                         </div>
                                     </div>
-
                                 </div>
-
-
                             </div>
+
                             <video class="videoCover_1" autoplay muted loop>
                                 <source src="video/video_food_v1_mp4.mp4" type="video/mp4">
                                 <source src="video/food_ogv_cover.ogv" type="video/ogv">
@@ -106,29 +102,28 @@
                             </video>
                         </div>
                     </article>
+                </div> -->
+                <div class="picture col-md-12 col-sm-12 col-12 p-0 m-0">
+                    <div id="landingPicture" class="content">
+                        <div class="overlay">
+                            <div class="row">
+                                <div class="class col-md-12" style="text-align: center; width: 100% !important;">
+                                    <h1 class="brand-heading" style="text-shadow: 3px 3px 4px black">WORLD OF FOOD
+                                    </h1>
+                                    <p class="intro-text" style="text-shadow: 2px 2px 2px black;">Dobro došli</p>
+                                    <div class="class col-md-12" style="text-align: center;">
+                                        <a href="#Data2" class="btn btn-circle page-scroll">
+                                            <i class="fa fa-angle-double-down animated"
+                                                style="text-shadow: 2px 2px 2px black;"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 230" version="1.1"
-                xmlns="http://www.w3.org/2000/svg">
-                <defs>
-                    <linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
-                        <stop stop-color="rgba(0, 0, 0, 1)" offset="0%"></stop>
-                        <stop stop-color="rgba(0, 0, 0, 1)" offset="100%"></stop>
-                    </linearGradient>
-                </defs>
-                <path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)"
-                    d="M0,46L10,69C20,92,40,138,60,164.8C80,192,100,199,120,180.2C140,161,160,115,180,84.3C200,54,220,38,240,53.7C260,69,280,115,300,138C320,161,340,161,360,161C380,161,400,161,420,153.3C440,146,460,130,480,111.2C500,92,520,69,540,53.7C560,38,580,31,600,23C620,15,640,8,660,3.8C680,0,700,0,720,30.7C740,61,760,123,780,134.2C800,146,820,107,840,95.8C860,84,880,100,900,88.2C920,77,940,38,960,53.7C980,69,1000,138,1020,141.8C1040,146,1060,84,1080,49.8C1100,15,1120,8,1140,26.8C1160,46,1180,92,1200,103.5C1220,115,1240,92,1260,95.8C1280,100,1300,130,1320,118.8C1340,107,1360,54,1380,42.2C1400,31,1420,61,1430,76.7L1440,92L1440,230L1430,230C1420,230,1400,230,1380,230C1360,230,1340,230,1320,230C1300,230,1280,230,1260,230C1240,230,1220,230,1200,230C1180,230,1160,230,1140,230C1120,230,1100,230,1080,230C1060,230,1040,230,1020,230C1000,230,980,230,960,230C940,230,920,230,900,230C880,230,860,230,840,230C820,230,800,230,780,230C760,230,740,230,720,230C700,230,680,230,660,230C640,230,620,230,600,230C580,230,560,230,540,230C520,230,500,230,480,230C460,230,440,230,420,230C400,230,380,230,360,230C340,230,320,230,300,230C280,230,260,230,240,230C220,230,200,230,180,230C160,230,140,230,120,230C100,230,80,230,60,230C40,230,20,230,10,230L0,230Z">
-                </path>
-                <defs>
-                    <linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0">
-                        <stop stop-color="rgba(0, 0, 0, 1)" offset="0%"></stop>
-                        <stop stop-color="rgba(0, 0, 0, 1)" offset="100%"></stop>
-                    </linearGradient>
-                </defs>
-                <path style="transform:translate(0, 50px); opacity:0.9" fill="url(#sw-gradient-1)"
-                    d="M0,46L10,69C20,92,40,138,60,164.8C80,192,100,199,120,184C140,169,160,130,180,107.3C200,84,220,77,240,88.2C260,100,280,130,300,122.7C320,115,340,69,360,49.8C380,31,400,38,420,34.5C440,31,460,15,480,38.3C500,61,520,123,540,157.2C560,192,580,199,600,195.5C620,192,640,176,660,161C680,146,700,130,720,134.2C740,138,760,161,780,176.3C800,192,820,199,840,180.2C860,161,880,115,900,92C920,69,940,69,960,72.8C980,77,1000,84,1020,88.2C1040,92,1060,92,1080,103.5C1100,115,1120,138,1140,122.7C1160,107,1180,54,1200,34.5C1220,15,1240,31,1260,38.3C1280,46,1300,46,1320,69C1340,92,1360,138,1380,141.8C1400,146,1420,107,1430,88.2L1440,69L1440,230L1430,230C1420,230,1400,230,1380,230C1360,230,1340,230,1320,230C1300,230,1280,230,1260,230C1240,230,1220,230,1200,230C1180,230,1160,230,1140,230C1120,230,1100,230,1080,230C1060,230,1040,230,1020,230C1000,230,980,230,960,230C940,230,920,230,900,230C880,230,860,230,840,230C820,230,800,230,780,230C760,230,740,230,720,230C700,230,680,230,660,230C640,230,620,230,600,230C580,230,560,230,540,230C520,230,500,230,480,230C460,230,440,230,420,230C400,230,380,230,360,230C340,230,320,230,300,230C280,230,260,230,240,230C220,230,200,230,180,230C160,230,140,230,120,230C100,230,80,230,60,230C40,230,20,230,10,230L0,230Z">
-                </path>
-            </svg>
+
             <div id="Data2" class="row no-gutters"
                 style="padding-top: 100px; padding-bottom: 140px; text-align: center;">
                 <div class="col-md-12 col-sm-12 col-12 p-0 m-0">
@@ -207,15 +202,6 @@
                 </defs>
                 <path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)"
                     d="M0,46L10,69C20,92,40,138,60,164.8C80,192,100,199,120,180.2C140,161,160,115,180,84.3C200,54,220,38,240,53.7C260,69,280,115,300,138C320,161,340,161,360,161C380,161,400,161,420,153.3C440,146,460,130,480,111.2C500,92,520,69,540,53.7C560,38,580,31,600,23C620,15,640,8,660,3.8C680,0,700,0,720,30.7C740,61,760,123,780,134.2C800,146,820,107,840,95.8C860,84,880,100,900,88.2C920,77,940,38,960,53.7C980,69,1000,138,1020,141.8C1040,146,1060,84,1080,49.8C1100,15,1120,8,1140,26.8C1160,46,1180,92,1200,103.5C1220,115,1240,92,1260,95.8C1280,100,1300,130,1320,118.8C1340,107,1360,54,1380,42.2C1400,31,1420,61,1430,76.7L1440,92L1440,230L1430,230C1420,230,1400,230,1380,230C1360,230,1340,230,1320,230C1300,230,1280,230,1260,230C1240,230,1220,230,1200,230C1180,230,1160,230,1140,230C1120,230,1100,230,1080,230C1060,230,1040,230,1020,230C1000,230,980,230,960,230C940,230,920,230,900,230C880,230,860,230,840,230C820,230,800,230,780,230C760,230,740,230,720,230C700,230,680,230,660,230C640,230,620,230,600,230C580,230,560,230,540,230C520,230,500,230,480,230C460,230,440,230,420,230C400,230,380,230,360,230C340,230,320,230,300,230C280,230,260,230,240,230C220,230,200,230,180,230C160,230,140,230,120,230C100,230,80,230,60,230C40,230,20,230,10,230L0,230Z">
-                </path>
-                <defs>
-                    <linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0">
-                        <stop stop-color="rgba(0, 0, 0, 1)" offset="0%"></stop>
-                        <stop stop-color="rgba(0, 0, 0, 1)" offset="100%"></stop>
-                    </linearGradient>
-                </defs>
-                <path style="transform:translate(0, 50px); opacity:0.9" fill="url(#sw-gradient-1)"
-                    d="M0,46L10,69C20,92,40,138,60,164.8C80,192,100,199,120,184C140,169,160,130,180,107.3C200,84,220,77,240,88.2C260,100,280,130,300,122.7C320,115,340,69,360,49.8C380,31,400,38,420,34.5C440,31,460,15,480,38.3C500,61,520,123,540,157.2C560,192,580,199,600,195.5C620,192,640,176,660,161C680,146,700,130,720,134.2C740,138,760,161,780,176.3C800,192,820,199,840,180.2C860,161,880,115,900,92C920,69,940,69,960,72.8C980,77,1000,84,1020,88.2C1040,92,1060,92,1080,103.5C1100,115,1120,138,1140,122.7C1160,107,1180,54,1200,34.5C1220,15,1240,31,1260,38.3C1280,46,1300,46,1320,69C1340,92,1360,138,1380,141.8C1400,146,1420,107,1430,88.2L1440,69L1440,230L1430,230C1420,230,1400,230,1380,230C1360,230,1340,230,1320,230C1300,230,1280,230,1260,230C1240,230,1220,230,1200,230C1180,230,1160,230,1140,230C1120,230,1100,230,1080,230C1060,230,1040,230,1020,230C1000,230,980,230,960,230C940,230,920,230,900,230C880,230,860,230,840,230C820,230,800,230,780,230C760,230,740,230,720,230C700,230,680,230,660,230C640,230,620,230,600,230C580,230,560,230,540,230C520,230,500,230,480,230C460,230,440,230,420,230C400,230,380,230,360,230C340,230,320,230,300,230C280,230,260,230,240,230C220,230,200,230,180,230C160,230,140,230,120,230C100,230,80,230,60,230C40,230,20,230,10,230L0,230Z">
                 </path>
             </svg>
             <div id="Data3" class="row no-gutters" style="padding-top: 120px; padding-bottom: 240px;">
@@ -667,7 +653,7 @@
                             <div class="menu-content">
                                 <a href="#HRVATSKA">Istarski fuži</a><span>55 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Fuži, tartufi, bosiljak, prošek
                             </div>
                         </div>
@@ -677,7 +663,7 @@
                             <div class="menu-content">
                                 <a href="#FRANCUSKA">Boeuf Bourguignon</a><span>75 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Govedina, crveno vino, gljive, slanina
                             </div>
                         </div>
@@ -687,7 +673,7 @@
                             <div class="menu-content">
                                 <a href="#HRVATSKA">Soparnik</a><span>35 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Blitva, češnjak, peršin, bademi, maslinovo ulje
                             </div>
                         </div>
@@ -697,7 +683,7 @@
                             <div class="menu-content">
                                 <a href="#FRANCUSKA">Bouillabaisse</a><span>65 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Školjke, Riba, češnjak, ljignje, maslinovo ulje
                             </div>
                         </div>
@@ -707,7 +693,7 @@
                             <div class="menu-content">
                                 <a href="#HRVATSKA">Zagorski štrukli</a><span>40 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Svježi sir, jaja, vrhnje
                             </div>
                         </div>
@@ -717,7 +703,7 @@
                             <div class="menu-content">
                                 <a href="#ŠPANJOLSKA">Paella</a><span>47 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Piletina, svinjetina, grah, mahune, šafran
                             </div>
                         </div>
@@ -727,7 +713,7 @@
                             <div class="menu-content">
                                 <a href="#ITALIJA">Carbonara</a><span>35 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Panceta, Pecorino sir, parmezan, jaja
                             </div>
                         </div>
@@ -737,7 +723,7 @@
                             <div class="menu-content">
                                 <a href="#ŠPANJOLSKA">Tortilla</a><span>37 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Jaja, luk, šunka Serrano, krumpir
                             </div>
                         </div>
@@ -747,7 +733,7 @@
                             <div class="menu-content">
                                 <a href="#ITALIJA">Margarita</a><span>37 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Mozarela, bosiljak, maslinovo ulje, rajčica
                             </div>
                         </div>
@@ -757,7 +743,7 @@
                             <div class="menu-content">
                                 <a href="#JAPAN">SUSHI</a><span>40 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Dimljeni losos, riža, morska trava, wasabi
                             </div>
                         </div>
@@ -767,7 +753,7 @@
                             <div class="menu-content">
                                 <a href="#JAPAN">SASHIMI</a><span>40 kn</span>
                             </div>
-                            <div class="menu-ingredients">
+                            <div class="menu-desc">
                                 Tuna, Losos, Soya sos, zelje
                             </div>
                         </div>
@@ -780,13 +766,11 @@
                 style="padding-top: 120px; padding-bottom: 150px; background: rgb(0, 0, 0);">
                 <div class="col-md-12 col-sm-12 col-12 text-center">
                     <h1>NAŠ TEAM</h1>
-                    <!-- <p class="text-muted">Naši kuhari</p> -->
                 </div>
                 <div class="container text-center">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="img-block mb-5">
-                                <!-- <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t4.jpg"  -->
                                 <img src="images/pic_jela/picture1_kuhar9.jpg"
                                     class="img-fluid  img-thumbnail rounded-circle" alt="image1">
                                 <div class="content mt-2">
@@ -797,7 +781,6 @@
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="img-block mb-5">
-                                <!-- <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t4.jpg"  -->
                                 <img src="images/pic_jela/picture1_kuhar7.jpg"
                                     class="img-fluid  img-thumbnail rounded-circle" alt="image1">
                                 <div class="content mt-2">
@@ -808,7 +791,6 @@
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="img-block mb-5">
-                                <!-- <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t4.jpg" -->
                                 <img src="images/pic_jela/picture1_kuhar8.jpg"
                                     class="img-fluid  img-thumbnail rounded-circle" alt="image1">
                                 <div class="content mt-2">
@@ -819,7 +801,6 @@
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="img-block mb-5">
-                                <!-- <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t4.jpg"  -->
                                 <img src="images/pic_jela/picture1_kuhar10.jpg"
                                     class="img-fluid  img-thumbnail rounded-circle" alt="image1">
                                 <div class="content mt-2">
@@ -884,9 +865,10 @@
             </div>
         </div>
     </footer>
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="vendor/jquery.easing/jquery.easing.min.js"></script> -->
+    <script src="vendor/jquery.easing/jquery.easing.min.js"></script>
     <script src="vendor/aos/aos.js"></script>
     <script>
         AOS.init();
