fix js, html, css

--- a/Index.html
+++ b/Index.html
@@ -124,8 +124,7 @@
                 </div>
             </div>
 
-            <div id="Data2" class="row no-gutters"
-                style="padding-top: 100px; padding-bottom: 140px; text-align: center;">
+            <div id="Data2" class="row no-gutters">
                 <div class="col-md-12 col-sm-12 col-12 p-0 m-0">
                     <div class="row">
                         <div data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1000"
@@ -204,11 +203,11 @@
                     d="M0,46L10,69C20,92,40,138,60,164.8C80,192,100,199,120,180.2C140,161,160,115,180,84.3C200,54,220,38,240,53.7C260,69,280,115,300,138C320,161,340,161,360,161C380,161,400,161,420,153.3C440,146,460,130,480,111.2C500,92,520,69,540,53.7C560,38,580,31,600,23C620,15,640,8,660,3.8C680,0,700,0,720,30.7C740,61,760,123,780,134.2C800,146,820,107,840,95.8C860,84,880,100,900,88.2C920,77,940,38,960,53.7C980,69,1000,138,1020,141.8C1040,146,1060,84,1080,49.8C1100,15,1120,8,1140,26.8C1160,46,1180,92,1200,103.5C1220,115,1240,92,1260,95.8C1280,100,1300,130,1320,118.8C1340,107,1360,54,1380,42.2C1400,31,1420,61,1430,76.7L1440,92L1440,230L1430,230C1420,230,1400,230,1380,230C1360,230,1340,230,1320,230C1300,230,1280,230,1260,230C1240,230,1220,230,1200,230C1180,230,1160,230,1140,230C1120,230,1100,230,1080,230C1060,230,1040,230,1020,230C1000,230,980,230,960,230C940,230,920,230,900,230C880,230,860,230,840,230C820,230,800,230,780,230C760,230,740,230,720,230C700,230,680,230,660,230C640,230,620,230,600,230C580,230,560,230,540,230C520,230,500,230,480,230C460,230,440,230,420,230C400,230,380,230,360,230C340,230,320,230,300,230C280,230,260,230,240,230C220,230,200,230,180,230C160,230,140,230,120,230C100,230,80,230,60,230C40,230,20,230,10,230L0,230Z">
                 </path>
             </svg>
-            <div id="Data3" class="row no-gutters" style="padding-top: 120px; padding-bottom: 240px;">
+            <div id="Data3" class="row no-gutters">
                 <div class="col-md-12 col-sm-12 col-12">
                     <div class="row no-gutters">
                         <div class="col-md-12 col-sm-12 col-12" style="text-align: center;">
-                            <h1>Hrana</h1>
+                            <div class="heading-hrana">Hrana</div>
                         </div>
 
                         <div class="col-md-12 col-sm-12 col-12">
@@ -590,8 +589,7 @@
                     </div>
                 </div>
             </div>
-            <div id="Data4" class="row no-gutters"
-                style="padding-top: 120px; padding-bottom: 240px; background: black;">
+            <div id="Data4" class="row no-gutters">
                 <div class="container col-xl-12 col-md-12 col-sm-12 col-xs-12" data-aos="fade-up" style="color: wheat;">
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-12" style="text-align: center;">
@@ -638,8 +636,7 @@
                     </div>
                 </div>
             </div>
-            <div id="Data5" class="row no-gutters"
-                style="padding-top: 100px; padding-bottom: 440px; background: black;">
+            <div id="Data5" class="row no-gutters">
                 <div class="col-md-12 col-sm-12 col-12" style="text-align: center;">
                     <h1>Cjenik</h1>
                 </div>
@@ -762,8 +759,7 @@
                 </div>
 
             </div>
-            <div id="Data6" class="row no-gutters"
-                style="padding-top: 120px; padding-bottom: 150px; background: rgb(0, 0, 0);">
+            <div id="Data6" class="row no-gutters">
                 <div class="col-md-12 col-sm-12 col-12 text-center">
                     <h1>NAŠ TEAM</h1>
                 </div>
@@ -864,6 +860,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
