change of css + html fixes

--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
                         </ul>
                     </div>
                 </div>
-                <!--main-menu end-->
+                <!--end menu-->
             </nav>
         </header>
         <div class="container-fluid p-0 m-0">
@@ -122,6 +122,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End home -->
             </div>
 
             <div id="Data2" class="row no-gutters">
@@ -190,6 +191,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End priča -->
             </div>
             <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 230" version="1.1"
                 xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +220,7 @@
 
                         <div class="col-sm-12 col-sm-12 col-12 paddingB5">
                             <div class="carouselWrapper" style="width:100%;">
-                                <div id="carouselExampleFade5" class="carousel slide carousel-fade" data-ride="carousel"
+                                <div id="carouselFade5" class="carousel slide carousel-fade" data-ride="carousel"
                                     data-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
@@ -272,12 +274,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleFade5" role="button"
+                                    <a class="carousel-control-prev" href="#carouselFade5" role="button"
                                         data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Previous</span>
                                     </a>
-                                    <a class="carousel-control-next" href="#carouselExampleFade5" role="button"
+                                    <a class="carousel-control-next" href="#carouselFade5" role="button"
                                         data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Next</span>
@@ -294,7 +296,7 @@
                         <div class="col-md-12 col-sm-12 col-12 paddingB5">
                             <!-- <div"> -->
                             <div class="carouselWrapper" style="width:100%;">
-                                <div id="carouselExampleFade1" class="carousel slide carousel-fade" data-ride="carousel"
+                                <div id="carouselFade1" class="carousel slide carousel-fade" data-ride="carousel"
                                     data-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
@@ -348,12 +350,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleFade1" role="button"
+                                    <a class="carousel-control-prev" href="#carouselFade1" role="button"
                                         data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Previous</span>
                                     </a>
-                                    <a class="carousel-control-next" href="#carouselExampleFade1" role="button"
+                                    <a class="carousel-control-next" href="#carouselFade1" role="button"
                                         data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Next</span>
@@ -368,7 +370,7 @@
                         </div>
                         <div class="col-sm-12 col-sm-12 paddingB5">
                             <div class="carouselWrapper" style="width:100%;">
-                                <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-ride="carousel"
+                                <div id="carouselFade2" class="carousel slide carousel-fade" data-ride="carousel"
                                     data-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
@@ -422,12 +424,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleFade2" role="button"
+                                    <a class="carousel-control-prev" href="#carouselFade2" role="button"
                                         data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Previous</span>
                                     </a>
-                                    <a class="carousel-control-next" href="#carouselExampleFade2" role="button"
+                                    <a class="carousel-control-next" href="#carouselFade2" role="button"
                                         data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Next</span>
@@ -443,7 +445,7 @@
                         </div>
                         <div class="col-sm-12 col-sm-12 col-12 paddingB5">
                             <div class="carouselWrapper" style="width:100%;">
-                                <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-ride="carousel"
+                                <div id="carouselFade3" class="carousel slide carousel-fade" data-ride="carousel"
                                     data-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
@@ -497,12 +499,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleFade3" role="button"
+                                    <a class="carousel-control-prev" href="#carouselFade3" role="button"
                                         data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Previous</span>
                                     </a>
-                                    <a class="carousel-control-next" href="#carouselExampleFade3" role="button"
+                                    <a class="carousel-control-next" href="#carouselFade3" role="button"
                                         data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Next</span>
@@ -519,7 +521,7 @@
 
                         <div class="col-sm-12 col-sm-12 col-12 paddingB5">
                             <div class="carouselWrapper" style="width:100%;">
-                                <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-ride="carousel"
+                                <div id="carouselFade4" class="carousel slide carousel-fade" data-ride="carousel"
                                     data-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
@@ -573,12 +575,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleFade4" role="button"
+                                    <a class="carousel-control-prev" href="#carouselFade4" role="button"
                                         data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Previous</span>
                                     </a>
-                                    <a class="carousel-control-next" href="#carouselExampleFade4" role="button"
+                                    <a class="carousel-control-next" href="#carouselFade4" role="button"
                                         data-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="sr-only">Next</span>
@@ -588,6 +590,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End Hrana -->
             </div>
             <div id="Data4" class="row no-gutters">
                 <div class="container col-xl-12 col-md-12 col-sm-12 col-xs-12" data-aos="fade-up" style="color: wheat;">
@@ -635,6 +638,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End kontakt -->
             </div>
             <div id="Data5" class="row no-gutters">
                 <div class="col-md-12 col-sm-12 col-12" style="text-align: center;">
@@ -757,7 +761,7 @@
                     </div>
 
                 </div>
-
+                <!-- End cjenik -->
             </div>
             <div id="Data6" class="row no-gutters">
                 <div class="col-md-12 col-sm-12 col-12 text-center">
@@ -819,7 +823,7 @@
                     </div>
                 </div>
             </div>
-            <!-- End Contact Section -->
+            <!-- End o nama -->
         </div>
     </main>
 
@@ -860,7 +864,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- End footer -->
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
